--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -116,4 +116,12 @@
       -webkit-transform: rotate(5deg) scale(1.3);
     }
   }
+
+  &__feild-error {
+    color: red;
+    font-size: 1.2rem;
+    border-bottom: 1px solid red;
+    margin-bottom: 1rem;
+    display: inline-block;
+  }
 }
